--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,27 @@
-:root{
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #0B2434;
+  padding: 20px;
+  height: 100vh;
+}
+
+div#root {
+  height: 100%;
+  width: 100%;
+  height: 400px;
+  width: 400px; 
 }
 
 .game-board {
-  height: 320px;
-  width: 320px;
   background-color: #F5F5F5;
-  top: 30px;
-  left: 20px;
-  border-radius: 10px;
+  height: 100%;
+  border-radius: 5px;
 }
