--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,27 @@ div#root {
   background-color: #F5F5F5;
   height: 100%;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dice-container {
+  display: grid; 
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+}
+
+.die {
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  border: none;
+  font-family: Inter, sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+  cursor: pointer;
 }
