--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  font-family: Karla, sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -26,7 +27,7 @@ div#root {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -36,6 +37,11 @@ div#root {
   gap: 20px;
 }
 
+button {
+  font-family: Karla, sans-serif;
+  cursor: pointer;
+}
+
 .die {
   height: 50px;
   width: 50px;
@@ -43,8 +49,16 @@ div#root {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   border: none;
-  font-family: Inter, sans-serif;
   font-size: 1.75rem;
   font-weight: bold;
-  cursor: pointer;
+}
+
+.roll-btn {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035FF;
+  color: white;
+  font-size: 1.2rem;
 }
